fix for table overflow

--- a/web/src/ui/styles/ant-design-overrides.css
+++ b/web/src/ui/styles/ant-design-overrides.css
@@ -32,3 +32,8 @@
     height: 65px !important;
     line-height: 65px !important;
 }
+
+.ant-table td,
+.ant-table th {
+    white-space: nowrap;
+}
